--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,17 @@
   </head>
 
   <body>
+  <h1><%= session[:user_id] %></h1>
+  <ul>
+    <li><a href="/movies">Movies</a></li>
+    <li><a href="/characters">Characters</a></li>
+    <li><a href="/actors">Actors</a></li>
+    <li><a href="/directors">Directors</a></li>
+    <li><a href="/user_sign_in">Sign In</a></li>
+    <li><a href="/user_sign_out">Sign Out</a></li>
+    <li><a href="/user_sign_up">Sign Up</a></li>
+
+
     <%= yield %>
   </body>
 </html>
